feat: added the circuit breakers for the primary APIs in the restaurant service